--- a/hf_doksi2.tex
+++ b/hf_doksi2.tex
@@ -95,8 +95,15 @@ Ekkor az a szoftver összehasonlítja a fizikai leltár eredményét az adatbáz
 \end{figure}
 \end{landscape}
 
+\thispagestyle{empty}
+\begin{landscape}
 \subsection{Design Class Diagram}
-
+\begin{figure}[!h]
+    \centering
+        \includegraphics[width=1.4\textwidth]{kepek/dcd.pdf}
+        \caption{A rendszer design class diagramja.}
+\end{figure}
+\end{landscape}
 
 
 \end{document}
