dcd vonalakra szöveg, pdf véglegesítve

--- a/hf_doksi.tex
+++ b/hf_doksi.tex
@@ -25,7 +25,7 @@
 	\includegraphics[width=0.5\textwidth]{figures/bme_logo_kicsi.eps}\par\vspace{1cm}
 	\vspace{1cm}
 	\vspace{1.5cm}
-	{\huge\bfseries Szoftvertervezés 1. házi feladat \par}
+	{\huge\bfseries Szoftvertervezés házi feladat \par}
 	\vspace{15cm}
 	{\huge\itshape Locskai Norbert, Kovács András, Barancsuk Lilla \par}
 	\vfill
@@ -453,7 +453,7 @@ A webes felület biztosítja a vezető számára, hogy a hiányzó alkatrészek 
 \begin{figure}[!h]
     \centering
         \includegraphics[width=0.8\textwidth]{kepek/Rendeles_szekvencia.pdf}
-        \caption{A rendelés szekvencia diagramja.}
+        \caption{A rendelés-összeállítás szekvencia diagramja.}
 \end{figure}
 
 \thispagestyle{empty}
@@ -493,7 +493,7 @@ Ekkor az a szoftver összehasonlítja a fizikai leltár eredményét az adatbáz
 \subsection{Design Class Diagram}
 \begin{figure}[!h]
     \centering
-        \includegraphics[width=1.4\textwidth]{kepek/dcd.pdf}
+        \includegraphics[width=1.3\textwidth]{kepek/dcd.pdf}
         \caption{A rendszer design class diagramja.}
 \end{figure}
 \end{landscape}
